Creado el listado de usuarios la cabecera de inicio con un carrusel y un menu

--- a/flamencoDuro/src/styles.scss
+++ b/flamencoDuro/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Fuente para toda la web
+body{
+    font-family: 'Rajdhani', sans-serif;
+}
+
+.enunciado{
+    background-color: #d1e7dd;
+    text-align: center;
+    padding: 10px;
+    margin: 10px  0;
+    border-top: 1px solid #bcd0c7;
+    border-bottom: 1px solid #bcd0c7;
+    color: #635c5c;
+}
