Creada cabecear y footer

--- a/flamencoDuro/src/app/app.component.html
+++ b/flamencoDuro/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-carrusel-cabecera></app-carrusel-cabecera>
-<app-usuarios></app-usuarios>
+<!-- <app-cabecera-general></app-cabecera-general> -->
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
