--- a/flamencoDuro/src/app/carrusel-cabecera/menu-carrusel/menu-carrusel.component.html
+++ b/flamencoDuro/src/app/carrusel-cabecera/menu-carrusel/menu-carrusel.component.html
@@ -7,13 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><span class="text-danger">Inicio</span></a>
+            <a class="nav-link active" aria-current="page" routerLink=""><span class="text-danger">Inicio</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><span class="text-danger">Inicio</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><span class="text-danger">Inicio</span></a>
+            <a class="nav-link" routerLink="/usuarios"><span class="text-danger">Usuarios</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled"><span class="text-danger">Inicio</span></a>
